# kickoff-2026-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  check_db.py  fly.toml  knockout_wiki.txt  pyproject.toml  reset_db.py  temp_wikitext.json  test_db.py  test_fifa.py  test_knockout_wiki.py  test_webhook.py  wc26_api_implementation_plan.md
app/: __init__.py  config.py  dependencies.py  main.py
app/admin/: routes.py
app/admin/templates/: base.html  dashboard.html  login.html  match_detail.html  match_list.html  scrapers.html  standings.html
app/api/v1/: events.py  matches.py  meta.py  news.py  scorers.py  standings.py  webhooks.py
app/db/: database.py  init_db.py  models.py
app/scraper/: fbref.py  fifa.py  live_scraper.py  match_details.py  metadata_extractor.py  news.py  pipeline.py  scheduler.py  soccerdata_scraper.py  wikipedia.py
app/services/: webhooks.py
scratch/: backfill_events.py  backfill_matchstats.py  backfill_timeline.py  update_db.py
tests/: test_api.py  test_fifa.py  test_live_scraper.py  test_news.py  test_scraper.py  test_scraper_events.py  test_sd.py  test_sd_events.py  test_sd_pen.py  test_sd_pos.py  test_sd_sched.py  test_sd_single.py  test_sd_stats.py  test_sd_subs.py
